@@ -1,3 +1,8 @@
+Tue Sep 12 19:01:42 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
+
+	* More Quartz modifications.  Now has QuartzDbTable class reasonably
+	  fully specified.
+
 Tue Sep 12 17:48:49 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
 
 	* Quartztest compiles and works.  (Passing is not yet likely, though)
